Fix: type text overflow issues

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -10,7 +10,7 @@
 		}
 	}
 
-	--main-page-intro-font-size: clamp(45px, 8vw, 80px);
+	--main-page-intro-font-size: clamp(45px, 7.7vw, 80px);
 	--main-page-intro-cursor-height: clamp(47px, 8vw, 82px);
 
 	@media screen and (max-width: v.$sm) {
